<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">mDOC Reader</string>

    <!-- Generic -->
    <string name="generic_error_message">Oops! Something went wrong</string>
    <string name="generic_error_description">If the issue persists, please contact customer support</string>
    <string name="generic_error_button_retry">TRY AGAIN</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_done">Done</string>
    <string name="generic_ok">OK</string>
    <string name="generic_yes">yes</string>
    <string name="generic_no">no</string>

    <!-- Home -->
    <string name="home_screen_title">mDoc Proximity Verifier</string>
    <string name="home_scan_qr">Scan QR Code</string>
    <string name="home_tap_to_create">Tap to create request</string>
    <string name="home_nfc_ready">NFC ready to tap</string>

    <!-- Menu -->
    <string name="menu_title">Menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_retrieval_methods">Data retrieval methods</string>
    <string name="settings_category_retrieval_methods_desc">Used for NFC negotiated handover</string>
    <string name="settings_retain_data">Retain data on device</string>
    <string name="settings_retain_data_on">Retain data on device</string>
    <string name="settings_retain_data_off">Don\'t retain data on device</string>
    <string name="settings_skip_issuer_trust">Skip issuer certificate verification</string>
    <string name="settings_skip_issuer_trust_on">Issuer trust check skipped (always trusted)</string>
    <string name="settings_skip_issuer_trust_off">Verify issuer certificate chain</string>
    <string name="settings_ble_peripheral">BLE peripheral server mode</string>
    <string name="settings_ble_peripheral_on">BLE peripheral server mode activated</string>
    <string name="settings_ble_peripheral_off">BLE peripheral server mode deactivated</string>

    <!-- Documents To Request -->
    <string name="doc_request_title">Documents to request</string>
    <string name="doc_request_search">Search documents</string>

    <!-- Custom Request -->
    <string name="custom_request_title">Custom %1$s request</string>
    <string name="custom_request_select_all">Select/Deselect all</string>

    <!-- QR Scan -->
    <string name="qr_scan_title">Device Engagement</string>

    <!-- Transfer Status -->
    <string name="transfer_title">Transfer Status</string>
    <string name="transfer_requesting">Requesting</string>
    <string name="transfer_status_label">Status: </string>
    <string name="transfer_no_permissions">One or more permissions are missing.\nTap here to go to App\'s Settings</string>
    <string name="transfer_connected">Connected</string>
    <string name="transfer_connecting">Connecting…</string>
    <string name="transfer_engagement_done">Device engagement completed</string>
    <string name="transfer_disconnected">Disconnected</string>
    <string name="transfer_error">Error: %1$s</string>
    <string name="transfer_response_received">Response received</string>
    <string name="transfer_request_sent">Request sent</string>

    <!-- Show Documents -->
    <string name="show_docs_title">Show Documents</string>
    <string name="show_docs_num_docs">Number of documents returned</string>
    <string name="show_docs_doctype">Doctype</string>
    <string name="show_docs_data_integrity">Is data integrity intact?</string>
    <string name="show_docs_device_sig">Is device signature valid?</string>
    <string name="show_docs_issuer_sig">Is issuer signature valid?</string>
    <string name="show_docs_signed">Signed</string>
    <string name="show_docs_valid_from">Valid from</string>
    <string name="show_docs_valid_until">Valid until</string>
    <string name="show_docs_trusted">Trusted Issuer</string>
    <string name="show_docs_not_trusted">Not-Trusted Issuer</string>

    <!-- Document Types -->
    <string name="doc_type_pid">PID</string>
    <string name="doc_type_mdl">mDL</string>
    <string name="doc_type_employee_id">Employee ID</string>

    <!-- Document Modes -->
    <string name="mode_full">Full</string>
    <string name="mode_custom">Custom</string>
</resources>
